--- a/app/globals.css
+++ b/app/globals.css
@@ -5,16 +5,37 @@
 /* html, body, heading */
 @layer base {
   body {
-    @apply bg-[#141414];
+    @apply bg-[#141414] text-white;
   }
   header {
-    @apply fixed top-0 z-50 items-center flex w-full justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
+    @apply fixed top-0 z-50 flex w-full items-center justify-between px-4 py-4 transition-all lg:px-10 lg:py-6;
   }
 }
 
 /* custom classNames */
 @layer components {
   .headerLink {
-    @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4s] hover:text-[#b3b3b3];
+    @apply cursor-pointer text-sm font-light text-[#e5e5e5] transition duration-[.4] hover:text-[#b3b3b3];
+  }
+  .bannerBtn {
+    @apply flex items-center gap-x-2 rounded px-5 py-1.5 text-sm font-semibold transition hover:opacity-75 md:py-2.5 md:px-8 md:text-xl;
+  }
+  .input {
+    @apply w-full rounded bg-[#333] px-5 py-3.5 placeholder-[gray] outline-none focus:bg-[#454545];
+  }
+}
+
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
   }
 }
